# DashboardParfum

./: .env.example  .gitignore  CONTEXT.md  DEV1_SCRAPING.md  DEV2_BACKEND_API.md  DEV3_FRONTEND.md  QA_Smoke_Test_Final.docx  QA_Test_Report.docx  QA_Test_Report_v2.docx  docker-compose.yml  start.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  db.py  main.py
backend/app/crud/: __init__.py  listings.py  products.py  scrape_jobs.py
backend/app/matcher/: normalize.py  resolver.py
backend/app/models/: __init__.py  canonical_product.py  listing.py  match_review_queue.py  price_snapshot.py  scrape_error.py  scrape_job.py
backend/app/routers/: admin.py  products.py
backend/app/schemas/: admin.py  product.py
backend/app/scrapers/: base.py  nocibe.py  primor.py  runner.py  sephora.py  utils.py
backend/scripts/: seed.py
backend/tests/matcher/: test_normalize.py  test_resolver.py
backend/tests/scrapers/: test_base.py  test_nocibe.py  test_primor.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: error.tsx  layout.tsx  not-found.tsx
web/src/app/admin/scrape/: page.tsx
web/src/app/products/: page.tsx
web/src/app/products/[id]/: page.tsx
web/src/components/: AdminTokenInput.tsx  PriceComparisonTable.tsx  PriceHistoryChart.tsx  ProductCard.tsx  SiteBadge.tsx  SkeletonCard.tsx
web/src/lib/: api.ts  mockData.ts  types.ts  utils.ts
