[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "parfums-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Scraping
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.44",
    # Matching
    "rapidfuzz>=3.8",
    # Data validation
    "pydantic>=2.7",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # DB
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    # Config
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",       # for async test client
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
